# app-lens

./: LICENSE  README.md  app-lens.cabal  applicative-bx.cabal  applicative-lens.cabal  stack.yaml
Bench/: Compositions.hs  Eval.hs  Prof.hs
Control/: LensFunction.hs
Control/LensFunction/: Core.hs  Exception.hs  Internal.hs  InternalL.hs  Util.hs
Data/: ApplicativeBX.hs  ApplicativeLens.hs
Data/ApplicativeBX/: Core.hs  Util.hs
Data/ApplicativeLens/: Core.hs  Exception.hs  LLens.hs  Lens.hs  Util.hs
Examples/: Bench.hs  Evaluator.hs  Ex.hs  Ex2.hs  Ex3.hs  XML.hs
OtherResources/: ocompositions.html  oeval.html  vlcompositions.html  vleval.html
